deploy/kind/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alienbank
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
spec:
  ingressClassName: nginx
  rules:
    - host: alienbank.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alienbank
                port:
                  name: http
